# ez-address-parser

./: .gitignore  .travis.yml  404.html  LICENSE  MANIFEST.in  README.md  create_pretrained_model.py  example1.py  example2.py  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.py  sitemap.xml
.github/workflows/: pytest.yml
docs/: index.md
docs/source/: conf.py  index.rst
ez_address_annotator/: config.json  config.xml  tasks.json
ez_address_annotator/completions/: 1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  14.json  15.json  16.json  17.json  (+90 more)
ez_address_annotator/data/: convert.py  create_seed.py  export.py
ez_address_annotator/data/raw/: province_AB  province_BC  province_MB  province_NB  province_NL  province_NS  province_NT  province_NU  province_ON  province_PE  province_QC  province_SK  province_YT
ez_address_parser/: __main__.py  address_parser.py  constants.py  features.py  model  utils.py
search/: search_index.json
src/ez_address_parser/: __init__.py  address_parser.py  constants.py  features.py  model  utils.py
tests/: test_address_parser.py  test_constants.py  test_features.py  test_utils.py
